// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order - SummaryCard Should match snapshot when loading 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-26ymy3-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiBox-root css-ju4zfe"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
      >
        Order Summary
      </h5>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-3zd3l8-MuiPaper-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container css-cqjonc-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
          >
            Subtotal
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight css-1ufy15n-MuiTypography-root"
            data-testid="order-summary-subtotal"
          >
            <span
              class="MuiBox-root css-1bvc4cc"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                style="width: 80px;"
              />
            </span>
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
          >
            Tax
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight css-1ufy15n-MuiTypography-root"
            data-testid="order-summary-tax"
          >
            <span
              class="MuiBox-root css-1bvc4cc"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                style="width: 80px;"
              />
            </span>
          </p>
        </div>
      </div>
      <div
        class="MuiBox-root css-1ebprri"
      >
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1k5xob2-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
          >
            Order Total
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight css-1eszk6v-MuiTypography-root"
            data-testid="order-summary-order-total"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
              style="width: 80px;"
            />
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
        >
          <button
            class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-1fitk8o-MuiButtonBase-root-MuiButton-root"
            data-testid="add-all-to-cart-button"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <div
              class="MuiBox-root css-48y3p0"
            >
              <div
                class="MuiBox-root css-hyxlzm"
              >
                <span
                  aria-valuenow="100"
                  class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-1wyqyef-MuiCircularProgress-root"
                  role="progressbar"
                  style="width: 16px; height: 16px; transform: rotate(-90deg);"
                >
                  <svg
                    class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                    viewBox="22 22 44 44"
                  >
                    <circle
                      class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
                      cx="44"
                      cy="44"
                      fill="none"
                      r="19.5"
                      stroke-width="5"
                      style="stroke-dasharray: 122.522; stroke-dashoffset: 0.000px;"
                    />
                  </svg>
                </span>
                <span
                  class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1yx9kzf-MuiCircularProgress-root"
                  role="progressbar"
                  style="width: 16px; height: 16px;"
                >
                  <svg
                    class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                    viewBox="22 22 44 44"
                  >
                    <circle
                      class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
                      cx="44"
                      cy="44"
                      fill="none"
                      r="19.5"
                      stroke-width="5"
                    />
                  </svg>
                </span>
              </div>
            </div>
            Add All to Cart
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order - SummaryCard Should match snapshot with an order 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-26ymy3-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiBox-root css-ju4zfe"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
      >
        Order Summary
      </h5>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-3zd3l8-MuiPaper-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container css-cqjonc-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
          >
            Subtotal
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight css-1ufy15n-MuiTypography-root"
            data-testid="order-summary-subtotal"
          >
            $963.57
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
          >
            Tax
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight css-1ufy15n-MuiTypography-root"
            data-testid="order-summary-tax"
          >
            $79.64
          </p>
        </div>
      </div>
      <div
        class="MuiBox-root css-1ebprri"
      >
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1k5xob2-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
          >
            Order Total
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight css-1eszk6v-MuiTypography-root"
            data-testid="order-summary-order-total"
          >
            $1,043.21
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
        >
          <button
            class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-1fitk8o-MuiButtonBase-root-MuiButton-root"
            data-testid="add-all-to-cart-button"
            disabled=""
            tabindex="-1"
            type="button"
          >
            Add All to Cart
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order - SummaryCard Should match snapshot with undefined order data 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-26ymy3-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiBox-root css-ju4zfe"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
      >
        Order Summary
      </h5>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-3zd3l8-MuiPaper-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container css-cqjonc-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
          >
            Subtotal
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight css-1ufy15n-MuiTypography-root"
            data-testid="order-summary-subtotal"
          >
            $0.00
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
          >
            Tax
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight css-1ufy15n-MuiTypography-root"
            data-testid="order-summary-tax"
          >
            $0.00
          </p>
        </div>
      </div>
      <div
        class="MuiBox-root css-1ebprri"
      >
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1k5xob2-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
          >
            Order Total
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight css-1eszk6v-MuiTypography-root"
            data-testid="order-summary-order-total"
          >
            $0.00
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
        >
          <button
            class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-1fitk8o-MuiButtonBase-root-MuiButton-root"
            data-testid="add-all-to-cart-button"
            disabled=""
            tabindex="-1"
            type="button"
          >
            Add All to Cart
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
